# ru_pracsys

./: README.md  add_cube_scene_baxter.py  add_cube_scene_pr2.py  apc_1.json  apc_2.json  apc_data_collect.json  apc_data_gathering.json  apc_film.json  baxter.rviz  baxter.sh  baxter_arms_position.py  change_z.rb  chups_order.json  competition_apc.json  cone.ply  data_collection.py  drogon.sh  example.actual  example2.json  example2_kinect2.json  example_baxter.json  example_thanasis.json  failure_modes.txt  frames.gv  grasping_preferences.txt  grasping_preferences_icra.txt  icra_grasp_process.rb  maestro_settings.txt  motoman_trajectory_execution.py  move_group_python_interface_tutorial.py  move_it_baxter_test.py  my.baxter2.urdf  object3-2.stl  object3.ply  oxford_ok.ply  oxford_ok.stl  pathHanoiSensingKinect.txt  plotRotations.py  plotRotations2.py  prepare.sh  (+28 more)
src/ecto_ros/: CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml  setup.py
src/ecto_ros/cmake/: CMakeLists.txt  ecto_ros-extras.cmake.in  gen_msg_wrappers.py  pubsub_gen_wrap.cmake
src/ecto_ros/doc/source/: conf.py  ecto_ros.rst  geometry_msgs.rst  index.rst  nav_msgs.rst  sensor_msgs.rst  std_msgs.rst
src/ecto_ros/include/ecto_ros/: ecto_ros.hpp  wrap_bag.hpp  wrap_pub.hpp  wrap_sub.hpp
src/ecto_ros/launch/: kinect_view.launch
src/ecto_ros/python/ecto_ros/: __init__.py  lazy_mat2image_publisher.py
src/ecto_ros/samples/: bag_read.py  bag_write.py  camera_pub.py  image_sub.py  image_sub_envless.py  sync_sub.py  usb_camera.py
src/ecto_ros/src/: BagReader.cpp  BagWriter.cpp  CMakeLists.txt  Synchronizer.cpp  camera_sync_printer.cpp  cv_bridge.cpp  cv_camera_info.cpp  cv_pose.cpp  ecto_ros.cpp
src/ecto_ros/test/: CMakeLists.txt  ecto_ros_test_utils.py  run_test.sh  t01.bag  test_bag.py  test_image_sub.py  test_reinit.py  test_sync_sub.py
src/linemod/: CMakeLists.txt  package.xml
src/linemod/conf/: data_gathering.rviz  detection.ros.ork  detection.ros_kinect2.ork  detection_realsense.ros.ork  detection_right.ros.ork  detection_run37-72.ros.ork  linemod_config.yml  linemod_test.rviz  training.ork
src/linemod/src/: CMakeLists.txt  db_linemod.h  linemod_detect.cpp  linemod_icp.cpp  linemod_icp.h  linemod_pointcloud.cpp  linemod_pointcloud.h  linemod_train.cpp
src/prx_decision_making/: CMakeLists.txt  package.xml  readme-alberto.txt
src/prx_decision_making/include/json/: read_file.h
src/prx_decision_making/include/prx_decision_making/: decision_making.h
src/prx_decision_making/msg/: DecisionMakingStateMessage.msg  GraspPlanningStateMessage.msg  MappingStateMessage.msg  MotionPlanningStateMessage.msg  ObjectPoseRecognitionStateMessage.msg
src/prx_decision_making/src/: grasp_decision_making.cpp  prx_decision_making.cpp  read_file.cpp  ru_pracsys.cpp
src/prx_external/: CMakeLists.txt
src/prx_external/ANN/: ANN.cc  ANN.h  ANNperf.h  ANNx.h  bd_tree.cc  bd_tree.h  brute.cc  kd_pr_search.h  kd_search.h  kd_split.cc  kd_tree.cc  kd_tree.h  kd_util.cc  perf.cc  pr_queue.h  pr_queue_k.h
src/prx_external/PNGCreator/: lodepng.cpp  lodepng.hpp
src/prx_external/PQP/: PQP.cpp
src/prx_external/asf2yaml/: main.cpp
src/prx_external/asf2yaml/headers/: Character.hpp  Library.hpp  Matrix.hpp  Misc.hpp  Quat.hpp  ReadSkeleton.hpp  Reader.hpp  Skeleton.hpp  Vector.hpp  pose_utils.hpp
src/prx_external/asf2yaml/source/: Character.cpp  Library.cpp  Skeleton.cpp  pose_utils.cpp
src/prx_external/catkin_generated/: generate_cached_setup.py  setup_cached.sh
src/prx_external/posest-1.0/: binocposest_demo  posest_demo
src/prx_motion_planning3/: CMakeLists.txt  package.xml  setup.py
src/prx_motion_planning3/cfg/: prx_motion_planning3.cfg
src/prx_planning/: CMakeLists.txt  package.xml  planning_plugin.xml  setup.py
src/prx_planning/action/: compute_plan.action  execute_plan.action
src/prx_planning/cmake_modules/: FindOMPL.cmake  FindYamlCpp.cmake
src/prx_planning/launch/: all_but_motion_planning.launch  all_but_motion_planning_baxter.launch  chuples_planning.launch  experiment_with_sensing.launch  just_object_detection.launch  motoman_left_empty_right_robotiq.launch  motoman_planning.launch  motoman_planning.rviz  motoman_robotiq_planning.rviz  prx_planning.launch  prx_planning.rviz  tdk_motoman_planning.launch
src/prx_planning/prx/: experiment.cpp  main.cpp
src/prx_planning/prx/planning/: planner.cpp  (+3 more)
src/prx_planning/scripts/: apc_objects.py  calib.py  grasp_eval_planning.py  orientation_helpers.py  prx_task_planning.py  reflex_gripper.py  robotiq_gripper.py  unigripper.py
src/prx_planning/srv/: compute_grasp.srv  compute_plan.srv  execute_plan.srv  place_object.srv  release.srv  validate_end_effector.srv
src/prx_simulation/: CMakeLists.txt  CMakeListsSimulation.txt  manifest.xml  package.xml  setup.py  simulation_plugin.xml
src/prx_simulation/cmake_modules/: FindBullet.cmake  FindLAPACK.cmake  FindOCTAVE.cmake
src/prx_simulation/launch/: NotesForMotoman.txt  motoman_sim.launch  motoman_sim.rviz
src/prx_simulation/msg/: bomberman_info_msg.msg  control_msg.msg  graph_msg.msg  interval_msg.msg  lqr_msg.msg  manipulation_acknowledgement.msg  plan_msg.msg  plant_locations_msg.msg  query_msg.msg  state_msg.msg
src/prx_simulation/prx/: main.cpp  motoman_sim.py  move_to_joint.py  robotiq_sim.py  unigripper_sim.py
src/prx_simulation/srv/: request_ground_truth_srv.srv  request_space_information_srv.srv  send_lqr_srv.srv  send_plans_srv.srv  set_sim_state_srv.srv
src/prx_simulation/urdf/: joint_names_sda10f.yaml  sda10f.urdf
src/prx_utilities/: CMakeLists.txt  CMakeListsUtilities.txt  package.xml  utilities_plugin.xml
src/prx_utilities/msg/: Vec4_msg.msg  rigid_body_info_msg.msg  space_msg.msg
src/prx_utilities/prx/: param_dump.cpp
src/prx_utilities/srv/: listen_srv.srv  send_plants_srv.srv  shutdown_node_srv.srv
src/prx_visualization/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  visualization_plugin.xml
src/reflex-ros-pkg/reflex_visualizer/: package.xml
src/unigripper_msgs/: CMakeLists.txt  package.xml
src/unigripper_msgs/srv/: UnigripperVacuumOn.srv
(+1638 files in other folders)
