<package>
  <name>object_recognition_linemod</name>
  <version>0.3.2</version>
  <description>An object recognition pipeline that uses LINE-MOD from OpenCV</description>
  <author email="vincent.rabaud@gmail.com">Vincent Rabaud</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  
  <url>https://github.com/wg-perception/linemod</url>

  <build_depend>cmake_modules</build_depend>
  <build_depend>ecto</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>object_recognition_core</build_depend>
  <build_depend>object_recognition_renderer</build_depend>
  <build_depend>opencv_candidate</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>image_geometry</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>ecto</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>object_recognition_core</run_depend>
  <run_depend>object_recognition_renderer</run_depend>
  <run_depend>opencv_candidate</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>image_geometry</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
